<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ahs_fragment_bg"
    android:orientation="vertical"
    android:weightSum="14" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_qr_title2"
            android:textColor="@color/action_bar_bg_color"
            android:textSize="@dimen/fragment_main_title_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/bg_miniwhit1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_title"
            android:textSize="@dimen/fragment_account_size" />

        <TextView
            android:id="@+id/account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_title"
            android:textSize="@dimen/fragment_account_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/account_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_qr_title3"
            android:textColor="@color/dialog_default"
            android:textSize="@dimen/fragment_tips_size" />

        <Button
            android:id="@+id/account_login"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_h_margin"
            android:background="@anim/button_dark_selector"
            android:text="@string/login_ensure"
            android:textColor="@color/action_bar_bg_color"
            android:textSize="@dimen/fragment_account_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/account_switch"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_h_margin"
            android:background="@anim/button_light_selector"
            android:text="@string/login_cancel"
            android:textColor="@color/action_bar_bg_color"
            android:textSize="@dimen/fragment_account_size" />
    </LinearLayout>

</LinearLayout>